updated styling to projects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="#" id="my-linkH" style="color: #3AE484;">Home</a>
+          <a class="nav-link" href="#" id="my-linkH" style="color: #3AE484;">Sean Perkins</a>
           <a class="nav-link" href="#headingOne" id="my-link1" style="color: #3AE484;">About Me</a>
           <a class="nav-link" href="#headingTwo" id="my-link2"  style="color: #3AE484">Projects</a>
           <a class="nav-link" href="#headingThree" id="my-link3" style="color: #3AE484;">Skills</a>
@@ -45,7 +45,7 @@
           </h2>
         </div>
     
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionDiv">
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionDiv">
           <div class="card-body" id="aboutCard">
             <div class="col-sm-1"></div>
             <div class="col-sm-6">
@@ -79,31 +79,65 @@
               <div class="row" id="projectsRow1">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8" id="projectsDiv1">
-                  <a href="https://codepen.io/sperkins28/pen/YzWzLjm" target="blank">
+                  <div id="creatureContain">
                     <img src="assets/cssCreature.png" id="creature">
-                  </a>
-                  <a href="https://sperkins28.github.io/staticLayout/" target="blank">
+                    <div id="creatureOver">
+                      <div id="creatureText">Captain American Pop figure created entirely out of CSS and HTML.
+                        <div>
+                          <a href="https://codepen.io/sperkins28/pen/YzWzLjm" style="color: #189ADC" target="blank">Check it Out!</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="staticContain">
                     <img src="assets/staticLayout.png" id="static">
-                  </a>
-                  <a href="https://sperkins28.github.io/API_1/" target="blank">
+                    <div id="staticOver">
+                      <div id="staticText">Replicated the Hulu homepage using only CSS and HTML. 
+                        <div>
+                          <a href="https://sperkins28.github.io/staticLayout/" style="color: #189ADC" target="blank">Take a look here!</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="api1Contain">
                     <img src="assets/poke-api.gif" id="api1">
-                  </a>
+                    <div id="api1Over">
+                      <div id="api1Text">Accesed the Pokémon API and implemented DOM Manipulation to display it in a fun way.
+                        <div>
+                            <a href="https://sperkins28.github.io/API_1/" style="color: #189ADC" target="blank">Choose your Pokémon!</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-sm-2"></div>
               </div>
               <div class="row" id="projectsRow2">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8" id="projectsDiv2">
-                  <a href="https://giphy-api-1150.web.app/" target="blank">
+                  <div id="api2Contain">
                     <img src="assets/giphy-api.gif" id="api2">
-                  </a>
-                  <a href="#headingTwo">
+                    <div id="api2Over">
+                      <div id="api2Text">More API work using the GIPHY API to display random gifs based on search.
+                        <div>
+                          <a href="https://giphy-api-1150.web.app/" style="color: #189ADC"target="blank">Take a look!</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="blueContain">
                     <img src="assets/blue-badge.png" id="blueBadge">
-                  </a>
-                  <a href="#headingTwo">
+                    <div id="blueOver">
+                      <div id="blueText">Check back later!<a href="#headingTwo"></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="redContain">
                     <img src="assets/red-badge.png" id="redBadge">
-                  </a>
-                </div>
+                    <div id="redOver">
+                      <div id="redText">Check back later!<a href="#headingTwo"></a>
+                    </div>
+                  </div>
                 <div class="col-sm-2"></div>
               </div>
             </div>
