added resume link to navbar andfixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a class="nav-link" href="#headingOne" id="my-link1" style="color: #3AE484;">About Me</a>
           <a class="nav-link" href="#headingTwo" id="my-link2"  style="color: #3AE484">Projects</a>
           <a class="nav-link" href="#headingThree" id="my-link3" style="color: #3AE484;">Skills</a>
+          <a class="nav-link" href="https://docs.google.com/document/d/1NOnZI22iMPFAKrFksZgCLit9L-kZrck3fMdUgIxPMOg/edit?usp=sharing" target="blank" id="my-linkR" style="color: #3AE484;">Resumé</a>
           <a class="nav-link" href="#contactForm" id="my-linkC" style="color: #3AE484;">Contact</a>
         </div>
       </div>
@@ -55,7 +56,7 @@
             <br><br>
 
               This course has been tough, and has challenged me in ways I have never been challenged before. However, I truly feel I have made the right choice in choosing to enroll in the course. I am <b>ADDICTED</b> to coding!
-              I love the fact that there is an infinite amount of knowledge for me to consume. I love that the only limits to knowledge are self imposed. I love creating something on my own then learning the morst efficent way. I'm excited to continue to learn more every day! 
+              I love the fact that there is an infinite amount of knowledge for me to consume. I love that the only limits to knowledge are self imposed. I love creating something on my own then learning the most efficent way. I'm excited to continue to learn more every day! 
             </div>
             <div class="col-sm-4" id="familyImgContainer">
               <img src="assets/family-sm.png" id="family">
@@ -181,7 +182,7 @@
               <img src="assets/css3-original-wordmark.svg" id="cssSVG">
               <img src="assets/github-original-wordmark.svg" id="gitSVG">
               <img src="assets/html5-original-wordmark.svg" id="htmlSVG">
-              <img src="assets/jquery-original-wordmark.svg" id="jqSVG">
+              <!-- <img src="assets/jquery-original-wordmark.svg" id="jqSVG"> -->
               <img src="assets/javascript-original.svg" id="jsSVG">
               <img src="assets/react-original-wordmark.svg" id="reactSVG">
             </div>
@@ -230,7 +231,7 @@
       </div>
     </div>
     <br>
-<footer>©Sean Perkins • 2020</footer>
+<footer>© Sean Perkins • 2020</footer>
 <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
