--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="card-body" id="aboutCard">
             <div class="col-sm-1"></div>
             <div class="col-sm-6">
-              I am currently studying to become a web developer at <a href="https://www.elevenfifty.org" target="blank">Eleven Fifty Academy</a>. After close to 7 years in the construction estimation field, I decided it was time to do something I actually enjoy. I had already watched my wife graduate from Eleven Fifty at the end of 2018 and saw how much she enjoyed the experience and work afterwords. I started digging into to coding and enrolled at Eleven Fifty quickly after.
+              I am currently studying to become a web developer at <a href="https://www.elevenfifty.org" target="blank">Eleven Fifty Academy</a>. After close to 7 years in the construction estimation field, I decided it was time to do something I actually enjoy. I had already watched my wife graduate from Eleven Fifty at the end of 2018 and saw how much she enjoyed the experience and work afterwords. I started digging into coding and enrolled at Eleven Fifty quickly after.
             
             <br><br>
 
